chapter03/netshoot-worker2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot-client-worker2
  labels:
    app: netshoot-client
spec:
  nodeSelector:
    kubernetes.io/hostname: kind-worker2
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
